roles/ai-models/files/networkpolicy-allow-from-3scale.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-3scale
  namespace: llm-hosting
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 3scale 
  podSelector: {}
  policyTypes:
  - Ingress
