roles/ai-models/files/networkpolicy-allow-from-openshift-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: llm-hosting
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-ingress
  podSelector: {}
  policyTypes:
  - Ingress
