roles/ai-models/files/networkpolicy-allow-from-redhat-ods-applications.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-rhods
  namespace: llm-hosting
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redhat-ods-applications
  podSelector: {}
  policyTypes:
  - Ingress
